--- a/style.css
+++ b/style.css
@@ -217,9 +217,9 @@ nav i{
 .lemon{
     top: -30%;
     position: absolute;
-/*     left: 50%; */
+    left: 50%;
     width: 25vw;
     transform: translate(-50%, 0%);
-    transition: all cubic-bezier(0.19, 1, 0.22, 1)0.5s;
+/*     transition: all cubic-bezier(0.19, 1, 0.22, 1)0.5s; */
 }
 
